erDiagram
  app_users ||--o{ refresh_tokens : user_id
  app_users ||--o{ coach_profiles : coach_user_id
  app_users ||--o{ coach_profiles : created_by_admin_id
  app_users ||--o{ coach_client_relationships : coach_user_id
  app_users ||--o{ coach_client_relationships : client_user_id
  app_users ||--o{ coach_client_relationships : created_by_user_id
  app_users ||--o{ exercises : owner_user_id
  exercises ||--o{ exercise_muscle_groups : exercise_id
  muscle_groups ||--o{ exercise_muscle_groups : muscle_group_code
  app_users ||--o{ routines : user_id
  app_users ||--o{ gyms : user_id
  app_users ||--o{ equipment : user_id
  gyms ||--o{ equipment : gym_id
  app_users ||--o{ workout_templates : user_id
  workout_templates ||--o{ workout_templates : copied_from_template_id
  workout_templates ||--o{ template_stats : template_id
  workout_templates ||--o{ template_days : template_id
  template_days ||--o{ template_day_exercises : template_day_id
  exercises ||--o{ template_day_exercises : exercise_id
  template_day_exercises ||--o{ template_day_exercise_muscle_groups : template_day_exercise_id
  template_days ||--o{ template_day_routines : template_day_id
  routines ||--o{ template_day_routines : routine_id
  app_users ||--o{ workout_sessions : user_id
  workout_templates ||--o{ workout_sessions : template_id
  template_days ||--o{ workout_sessions : template_day_id
  gyms ||--o{ workout_sessions : gym_id
  workout_sessions ||--o{ session_exercises : session_id
  template_day_exercises ||--o{ session_exercises : original_template_day_exercise_id
  exercises ||--o{ session_exercises : original_exercise_id
  session_exercises ||--o{ session_exercise_muscle_groups : session_exercise_id
  workout_sessions ||--o{ session_routines : session_id
  routines ||--o{ session_routines : original_routine_id
  session_exercises ||--o{ workout_sets : session_exercise_id
  equipment ||--o{ workout_sets : equipment_id
  app_users ||--o{ coach_session_comments : coach_user_id
  app_users ||--o{ coach_session_comments : client_user_id
  workout_sessions ||--o{ coach_session_comments : session_id
  app_users ||--o{ template_votes : user_id
  workout_templates ||--o{ template_votes : template_id
  app_users ||--o{ template_saves : user_id
  workout_templates ||--o{ template_saves : template_id
  app_users ||--o{ template_use_events : user_id
  workout_templates ||--o{ template_use_events : source_template_id
  workout_templates ||--o{ template_use_events : copied_template_id
  app_users ||--o{ coach_template_assignments : coach_user_id
  app_users ||--o{ coach_template_assignments : client_user_id
  workout_templates ||--o{ coach_template_assignments : template_id
  workout_templates ||--o{ template_analysis_results : template_id
  app_users {
    uuid id PK
    varchar_320_ email
    varchar_255_ password_hash
    varchar_120_ display_name
    varchar_30_ role
    timestamptz created_at
    timestamptz updated_at
  }
  refresh_tokens {
    uuid id PK
    uuid user_id FK
    varchar_255_ token_hash
    timestamptz expires_at
    timestamptz revoked_at
    timestamptz created_at
  }
  coach_profiles {
    uuid coach_user_id PK FK
    uuid created_by_admin_id FK
    text bio
    boolean active
    timestamptz created_at
    timestamptz updated_at
  }
  coach_client_relationships {
    uuid id PK
    uuid coach_user_id FK
    uuid client_user_id FK
    varchar_30_ status
    uuid created_by_user_id FK
    timestamptz accepted_at
    timestamptz revoked_at
    timestamptz created_at
    timestamptz updated_at
  }
  muscle_groups {
    varchar_50_ code PK
    varchar_100_ display_name
  }
  exercises {
    uuid id PK
    uuid owner_user_id FK
    varchar_160_ name
    text description
    varchar_30_ exercise_type
    varchar_30_ visibility
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
  }
  exercise_muscle_groups {
    uuid exercise_id FK
    varchar_50_ muscle_group_code FK
    varchar_30_ role
  }
  routines {
    uuid id PK
    uuid user_id FK
    varchar_160_ name
    varchar_30_ routine_type
    text content
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
  }
  gyms {
    uuid id PK
    uuid user_id FK
    varchar_160_ name
    varchar_255_ location
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
  }
  equipment {
    uuid id PK
    uuid user_id FK
    uuid gym_id FK
    varchar_160_ name
    varchar_50_ equipment_type
    text notes
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
    IS equipment_type
  }
  workout_templates {
    uuid id PK
    uuid user_id FK
    varchar_180_ name
    text description
    varchar_40_ split_type
    int days_per_week
    varchar_40_ difficulty
    int estimated_duration_minutes
    varchar_30_ visibility
    timestamptz published_at
    uuid copied_from_template_id FK
    varchar__ aggregated_muscle_groups
    uuid__ aggregated_official_exercise_ids
    text__ aggregated_exercise_names
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
    IS split_type
    IS difficulty
    IS estimated_duration_minutes
  }
  template_stats {
    uuid template_id PK FK
    int upvotes_count
    int downvotes_count
    int saves_count
    int uses_count
    numeric_12_4_ rating_score
    numeric_12_4_ trending_score
    int lock_version
    timestamptz updated_at
    __ upvotes_count
    uses_count AND
  }
  template_days {
    uuid id PK
    uuid template_id FK
    int day_number
    varchar_160_ name
    varchar_40_ focus
    int estimated_duration_minutes
    text notes
    timestamptz created_at
    timestamptz updated_at
    IS focus
    IS estimated_duration_minutes
  }
  template_day_exercises {
    uuid id PK
    uuid template_day_id FK
    uuid exercise_id FK
    varchar_160_ exercise_name_snapshot
    varchar_30_ exercise_type_snapshot
    int position
    int planned_sets
    varchar_50_ planned_reps
    numeric_8_2_ planned_weight
    int rest_seconds
    text note
    timestamptz created_at
    timestamptz updated_at
    IN exercise_type_snapshot
    _planned_weight AND
    _rest_seconds AND
  }
  template_day_exercise_muscle_groups {
    uuid template_day_exercise_id FK
    varchar_50_ muscle_group_code
    varchar_30_ role
  }
  template_day_routines {
    uuid id PK
    uuid template_day_id FK
    uuid routine_id FK
    varchar_30_ routine_type
    varchar_160_ routine_name_snapshot
    text routine_content_snapshot
    int position
  }
  workout_sessions {
    uuid id PK
    uuid user_id FK
    uuid template_id FK
    uuid template_day_id FK
    varchar_180_ template_name_snapshot
    varchar_160_ template_day_name_snapshot
    uuid gym_id FK
    varchar_160_ gym_name_snapshot
    varchar_30_ status
    timestamptz started_at
    timestamptz finished_at
    text notes
    timestamptz created_at
    timestamptz updated_at
  }
  session_exercises {
    uuid id PK
    uuid session_id FK
    uuid original_template_day_exercise_id FK
    uuid original_exercise_id FK
    varchar_160_ exercise_name_snapshot
    varchar_30_ exercise_type_snapshot
    int position
    int planned_sets_snapshot
    varchar_50_ planned_reps_snapshot
    numeric_8_2_ planned_weight_snapshot
    int rest_seconds_snapshot
    text template_note_snapshot
    boolean is_extra_exercise
    timestamptz created_at
    timestamptz updated_at
    IN exercise_type_snapshot
    _planned_weight_snapshot AND
    _rest_seconds_snapshot AND
  }
  session_exercise_muscle_groups {
    uuid session_exercise_id FK
    varchar_50_ muscle_group_code_snapshot
    varchar_30_ role_snapshot
  }
  session_routines {
    uuid id PK
    uuid session_id FK
    uuid original_routine_id FK
    varchar_30_ routine_type
    varchar_160_ routine_name_snapshot
    text routine_content_snapshot
    int position
    timestamptz started_at
    timestamptz ended_at
    IS ended_at
  }
  workout_sets {
    uuid id PK
    uuid session_exercise_id FK
    int set_number
    varchar_30_ set_type
    numeric_8_2_ weight
    int reps
    int duration_seconds
    numeric_10_2_ distance_meters
    numeric_3_1_ rpe
    text note
    uuid equipment_id FK
    varchar_160_ equipment_name_snapshot
    timestamptz completed_at
    timestamptz created_at
    timestamptz updated_at
    _reps AND
    _duration_seconds AND
    _distance_meters AND
    _rpe AND
  }
  coach_session_comments {
    uuid id PK
    uuid coach_user_id FK
    uuid client_user_id FK
    uuid session_id FK
    text comment
    timestamptz created_at
    timestamptz updated_at
    timestamptz deleted_at
  }
  template_votes {
    uuid user_id FK
    uuid template_id FK
    varchar_30_ vote_type
    timestamptz created_at
  }
  template_saves {
    uuid user_id FK
    uuid template_id FK
    timestamptz created_at
  }
  template_use_events {
    uuid id PK
    uuid user_id FK
    uuid source_template_id FK
    uuid copied_template_id FK
    varchar_180_ source_template_name_snapshot
    varchar_180_ copied_template_name_snapshot
    timestamptz created_at
  }
  coach_template_assignments {
    uuid id PK
    uuid coach_user_id FK
    uuid client_user_id FK
    uuid template_id FK
    text note
    varchar_30_ status
    timestamptz assigned_at
    timestamptz completed_at
    timestamptz revoked_at
  }
  template_analysis_results {
    uuid id PK
    uuid template_id FK
    int score
    varchar_50_ category
    jsonb positives
    jsonb warnings
    jsonb notes
    timestamptz created_at
    IN category
  }
  outbox_events {
    uuid id PK
    varchar_100_ aggregate_type
    uuid aggregate_id
    varchar_100_ event_type
    jsonb payload
    varchar_30_ status
    int attempts
    timestamptz available_at
    timestamptz processed_at
    timestamptz created_at
    text last_error
  }
